fix: spacing on form error text

--- a/src/blocks/form/__error/form__error.css
+++ b/src/blocks/form/__error/form__error.css
@@ -1,12 +1,19 @@
 .form__error {
- width: 358px;
+ max-width: 400px;
  color: #ff0000;
  font-family: 'Inter', 'Arial', sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 12px;
- line-height: 15px;
+ line-height: 13px;
  position: absolute;
- top: calc(100% - 29px);
+ top: calc(100% - 54px);
  left: 0;
+}
+
+@media screen and (max-width: 475px) {
+  .form__error {
+    line-height: 10px;
+    top: calc(100% - 58px);
+  }
 }
